--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
 
     //android core libraries
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
@@ -176,8 +176,18 @@ dependencies {
     androidTestImplementation "androidx.test:runner:1.4.0"
 
 
-    /*
+    //Room components
 
+
+    def room_version = "2.5.0-alpha02"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+
+
+
+    /*
     // To use android test orchestrator
     androidTestUtil "androidx.test:orchestrator:1.4.1"
 
