--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext {
+        roomVersion = '2.5.0-alpha02'
+    }
+
+
+
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1'
